--- a/www/index.html
+++ b/www/index.html
@@ -108,7 +108,7 @@
 
     </div>
     <!-- -->
-    <script src="cordova.js"></script>
+    <!-- <script src="cordova.js"></script> -->
     <!-- -->
 
     <script type="text/javascript" src="js/framework7.min.js"></script>
