--- a/www/pages/search.html
+++ b/www/pages/search.html
@@ -70,7 +70,7 @@
                           '<div class="item-title-row">' +
                             '<div class="item-title"><b>{{nama}}</b></div>' +
                           '</div>' +
-                          '<div class="item-text product-price">Rp{{hjual}}</div>' +
+                          // '<div class="item-text product-price">Rp{{hjual}}</div>' +
                           '<div class="item-text">{{kdbar}}</div>' +
                         '</div>' +
                       '</a>' +
