--- a/www/pages/home.html
+++ b/www/pages/home.html
@@ -206,9 +206,9 @@
                 if (data.image) {
                   
                   if (data.image.substring(0,4) == 'http' || data.image.substring(0,4) == 'data') {
-                    strHTML += '<img class="img-product" src="'+data.image+'" /></div></div>';
+                    strHTML += '<img class="img-product" src="'+data.image+'" style="max-height:70px; max-width:70px;" /></div></div>';
                   } else {
-                    strHTML += '<img class="img-product" src="https://apgroup.id'+data.image+'" /></div>';
+                    strHTML += '<img class="img-product" src="https://apgroup.id'+data.image+'" style="max-height:70px; max-width:70px;" /></div>';
                   }
                 } else {
                   strHTML += '<img class="img-product" src="https://askitchen.com/images/noimage2.png" /></div>';
