--- a/www/index.html
+++ b/www/index.html
@@ -76,6 +76,7 @@
                                     <select id="whouse" name="whouse">
                                       <option value="01">WH ASOVIC Pusat</option>
                                       <option value="02">Gudang Ungasan</option>
+                                      <option value="03">WH ASOVIC JKT</option>
                                     </select>
                                 </div>
                             </div>
