--- a/www/pages/home.html
+++ b/www/pages/home.html
@@ -130,7 +130,7 @@
 
         if (app.data.kode) {
           
-          console.log('code exists!')
+          // console.log('code exists!')
           
           var whouse = app.data.whouse;
           var lokasi = app.data.lokasi;
