--- a/www/pages/search.html
+++ b/www/pages/search.html
@@ -104,6 +104,7 @@
           
           var kode = $$(this).find('.kode').val();
 
+          // console.log(kode)
           app.data.kode = kode;
           
           app.router.navigate('/', {
