--- a/www/index.html
+++ b/www/index.html
@@ -77,6 +77,8 @@
                                       <option value="01">WH ASOVIC Pusat</option>
                                       <option value="02">Gudang Ungasan</option>
                                       <option value="03">WH ASOVIC JKT</option>
+                                      <option value="04">MUCHEF Gudang Ungasan</option>
+                                      <option value="05">MUCHEF Production</option>
                                     </select>
                                 </div>
                             </div>
