perubahan alamat apgroup

--- a/www/pages/search.html
+++ b/www/pages/search.html
@@ -65,7 +65,7 @@
                     '<li>' +
                       '<a href="#" class="item-link item-content">' +
                         '<input type="hidden" class="kode" value="{{kdbar}}" />' +
-                        '<div class="item-media"><img src="{{#if gambar}}{{#js_if "this.prefix == \'http\' || this.prefix == \'data\'"}}{{gambar}}{{else}}https://apgroup.id/{{gambar}}{{/js_if}}{{else}}https://askitchen.com/images/noimage2.png{{/if}}" style="max-height:70px; max-width:70px;" /></div>' +
+                        '<div class="item-media"><img src="{{#if gambar}}{{#js_if "this.prefix == \'http\' || this.prefix == \'data\'"}}{{gambar}}{{else}}http://www.apgroup.id/{{gambar}}{{/js_if}}{{else}}https://askitchen.com/images/noimage2.png{{/if}}" style="max-height:70px; max-width:70px;" /></div>' +
                         '<div class="item-inner">' +
                           '<div class="item-title-row">' +
                             '<div class="item-title"><b>{{nama}}</b></div>' +
