--- a/www/pages/home.html
+++ b/www/pages/home.html
@@ -73,6 +73,8 @@
       
       pageBeforeIn: function (event, page) {
 
+        // console.log(items)
+
         var virtualList = app.virtualList.create({
           // List Element
           el: '.virtual-stock',
