--- a/www/index.html
+++ b/www/index.html
@@ -79,6 +79,7 @@
                                       <option value="03">WH ASOVIC JKT</option>
                                       <option value="04">MUCHEF Gudang Ungasan</option>
                                       <option value="05">MUCHEF Production</option>
+                                      <option value="06">Bali HO</option>
                                     </select>
                                 </div>
                             </div>
@@ -111,7 +112,7 @@
 
     </div>
     <!-- -->
-    <script src="cordova.js"></script>
+    <!-- <script src="cordova.js"></script> -->
     <!-- -->
 
     <script type="text/javascript" src="js/framework7.min.js"></script>
